<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/linear_alert_dialog_bg"
    android:orientation="vertical"
    android:background="@drawable/bg_corners_white_1"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:textSize="@dimen/sp_12"
        android:gravity="center"
        android:text="@string/close_scan_tip"
        android:layout_height="wrap_content">
    </TextView>

    <View
        style="@style/ViewLineHorizontalOnePx"/>
    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/note_font_color"
            android:textStyle="bold"
            android:text="@string/scannning_cancle_btn_name"
            android:textSize="@dimen/sp_16" />

        <View style="@style/ViewLineVerticalOneDp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</LinearLayout>