<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/linear_alert_dialog_bg"
    android:orientation="vertical"
    android:background="@drawable/bg_corners_white_1"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/car_sign_bk_shape"
        android:layout_height="@dimen/dp_56">
        <ImageView
            android:id="@+id/item_image"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/img_yto">

        </ImageView>
        <EditText
            android:id="@+id/edt_alert_dialog_content"
            android:paddingLeft="@dimen/dp_16"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/float_cancle_font_color"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:hint="@string/scan_car_sign_node"
            android:layout_height="match_parent">
        </EditText>

        <ImageView
            android:id="@+id/icon_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:src="@drawable/icon_scan"></ImageView>
    </LinearLayout>
    <TextView
        android:id="@+id/note"
        android:layout_marginTop="@dimen/dp_4"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:textSize="@dimen/sp_12"
        android:gravity="center"
        android:textColor="@color/red"
        android:text="当前车签号输入日期为：2019-12-24 16:40:30"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_20"
        android:textSize="@dimen/sp_12"
        android:gravity="center"
        android:text="@string/scan_car_sign_tip"
        android:layout_height="wrap_content">
    </TextView>

    <View
        style="@style/ViewLineHorizontalOnePx"/>
    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/note_font_color"
            android:textStyle="bold"
            android:text="@string/scan_car_sign_cancle_btn"
            android:textSize="@dimen/sp_16" />

        <View style="@style/ViewLineVerticalOneDp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</LinearLayout>