<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corners_white_1"
    android:orientation="vertical">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/select_pistol_recycle_list"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="@dimen/dp_260">
    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ble_list_progessbar"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="@dimen/dp_260">
        <ProgressBar
            android:layout_width="wrap_content"
            android:id="@+id/pisotl_progessbar"
            android:layout_above="@id/linear_bottom"
            android:indeterminateTintMode="src_atop"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/note_font_color"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="@dimen/dp_16"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/ble_scan_note"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <View style="@style/ViewLineHorizontalOnePx"/>
    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/note_font_color"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/sp_16" />

        <View style="@style/ViewLineVerticalOneDp" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</LinearLayout>