<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_corners_white_1"
    android:paddingTop="@dimen/dp_20"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:id="@+id/scan_pistol_layout"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/dp_56"
                    android:src="@drawable/scan_btn_pistol"
                    android:layout_height="@dimen/dp_56">
                </ImageView>
                <TextView
                    android:layout_marginTop="@dimen/dp_6"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12"
                    android:text="@string/scannning_pistol_name"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/scan_phone_layout"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/dp_56"
                    android:src="@drawable/scan_btn_phone"
                    android:layout_height="@dimen/dp_56">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/dp_6"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12"
                    android:text="@string/scannning_phone_name"
                    android:layout_height="wrap_content">

                </TextView>



            </LinearLayout>
        </LinearLayout>
    <Button
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_width="@dimen/dp_80"
        android:id="@+id/scan_select_cancle_btn"
        android:textColor="@color/note_font_color"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/scannning_cancle_btn_name"
        android:background="@drawable/bottom_float_cancle_btn_shape"
        android:layout_height="@dimen/dp_40">
    </Button>
    </LinearLayout>